# passagemath-pkg-moment_cone

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  pyproject.toml  sage_environment.yml
docs/: Makefile  make.bat
docs/source/: api.rst  conf.py  index.rst
drafts/: bench_tau_candidates.py  cmp_kron_lambda.md  cmp_kron_multi.py  cmp_kron_multi.sh  cmp_parallel.py  load_tau.py  main.py  save_tau.py  test_Schur.py
src/All_Cases_Init/: Groebner.py  __init__.py  bkr.py  blocks.py  combi.py  export.py  fermions.py  group.py  hives.py  hyperplane_candidates.py  inequality.py  kronecker.py  kx_mod.py  list_of_W.py  main.py  maintmp.py  partition.py  permutation.py  ramification.py  rep.py  rings.py  root.py  stabK.py  task.py  tau.py  tri_lin.py  utils.py  vector_chooser.py  weight.py
src/All_Cases_Init/reference_datas/: comparisons.py
src/cone/: Groebner.py  Normaliz2python.py  __init__.py  bkr.py  bkr.readme  bkr_lambda.py  blocks.py  cone_dimension.py  dim_stabilizer_K.py  dim_stabilizer_k.py  dimension.py  export.py  groebner.py  hyperplane_candidates.py  inequality.py  kronecker.py  kx_mod.py  linear_group.py  linear_triangular.py  listW_temp.py  list_of_W.py  main.py  main_steps.py  main_to_be_inserted.py  maintmp.py  matrix.py  old_main_to_be_inserted.py  parallel.py  partition.py  permutation.py  ramification.py  representation.py  rings.py  root.py  script.txt  spaces.py  stabK.py  stabK_new2.py  task.py  tau.py  (+5 more)
src/cone/References/: ineq_Normaliz-3-3-3.out  ineq_Normaliz-4-4-4.out  ineq_Normaliz-5-4-4.out
src/cone/reference_datas/: comparisons.py  ineq_Python_4_4_4_1_kron_Vergne_Walter.py  ineq_Python_7_fermion_3_Klyachko.py  ineq_Python_8_fermion_3_Klyachko.py  ineq_Python_8_fermion_4_Klyachko.py
src/grobner/: Grobner.py
src/moment_cone/: __init__.py  __main__.py  _set_of_vector.cpp  _set_of_vector.pyi  array.py  bkr.py  blocks.py  export.py  groebner.py  hyperplane_candidates.py  inequality.py  kronecker.py  kx_mod.py  linear_group.py  list_of_W.py  main.py  main_steps.py  parallel.py  partition.py  permutation.py  ramification.py  representation.py  rings.py  root.py  stabK.py  task.py  tau.py  tau_storage.py  typing.py  utils.py  weight.py
src/moment_cone/reference_datas/: __init__.py  comparisons.py  ineq_Kronecker_2_2_2.py  ineq_Kronecker_3_2_2.py  ineq_Kronecker_3_3_2.py  ineq_Kronecker_3_3_3.py  ineq_Kronecker_4_3_3.py  ineq_Kronecker_4_4_3.py  ineq_Kronecker_4_4_4_Vergne_Walter.py  ineq_Kronecker_5_3_3.py  ineq_Kronecker_5_4_3.py  ineq_Kronecker_5_4_4.py  ineq_Kronecker_5_5_5.py  ineq_Kronecker_6_6_6.py  ineq_Kronecker_7_6_6.py  ineq_Python_4_4_4_1_kron_Vergne_Walter.py  ineq_Python_7_fermion_3_Klyachko.py  ineq_Python_8_fermion_3_Klyachko.py  ineq_Python_8_fermion_4_Klyachko.py
src/tout/: blocks.py  combi.py  group.py  hyperplane_candidates.py  maintmp.py  rep.py  root.py  tau.py  utils.py  weight.py
src/tout_test/: Groebner.py  __init__.py  array.py  bkr.py  blocks.py  boson.py  export.py  fermion.py  inequality.py  kronecker.py  kx_mod.py  linear_group.py  linear_triangular.py  list_of_W.py  maintmp.py  particle.py  partition.py  ramification.py  representation.py  rings.py  root.py  stabK.py  task.py  tau.py  typing.py  utils.py  weight.py
src/tout_test/reference_datas/: Klyachko.py  Vergne_Walter.py  comparisons.py
tests/: __init__.py  test_blocks.py  test_cone_dimension.py  test_kronecker.py  test_partition.py  test_permutation.py  test_representation.py  test_root.py  test_tau.py  test_utils.py  test_vector_chooser.py  test_weight.py
