[build-system]
requires = [
    "setuptools>=64",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "cone"
version = "0.0.1"
description = "Kronecker, cone and co."
readme = "README.md"
authors = [
    {name = "Michael Bulois", email = "michael.bulois@univ-st-etienne.fr"},
    {name = "Roland Denis", email = "denis@math.univ-lyon1.fr"},
    {name = "Nicolas Ressayre", email = "ressayre@math.univ-lyon1.fr"},
]
maintainers = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
]
keywords = []
dependencies = [
   "sagemath >= 1.3.0", # To have Python >= 3.10
   "mypy",   # Checking unit tests
   "pytest", # Checking examples in docstring
   "pdoc3",  # Generating documentation
   "psutil", # Performance monitoring
   "types-psutil", # Associated type stubs
   "line_profiler", # Profiling functions by line_profiler
   "pyprof2calltree", # Converter of functions call stats for kcachegrind
   "tqdm", # Progress bar
]
requires-python = ">=3.10"

[project.scripts]
cone = "cone.main:cone_from_cmd"

[tool.mypy]
plugins = "numpy.typing.mypy_plugin"