[build-system]
requires = [
    "wheel",
    "scikit-build-core",
    "pybind11",
]
# See https://learn.scientific-python.org/development/guides/packaging-compiled/
build-backend = "scikit_build_core.build"

[project]
name = "moment_cone"
version = "0.1.0"
description = "Python/Sage package for computing the moment cone for QMP (Kronecker) and fermion"
readme = "README.md"
authors = [
    {name = "Michael Bulois", email = "michael.bulois@univ-st-etienne.fr"},
    {name = "Roland Denis", email = "denis@math.univ-lyon1.fr"},
    {name = "Nicolas Ressayre", email = "ressayre@math.univ-lyon1.fr"},
]
maintainers = [
    {name = "Michael Bulois", email = "michael.bulois@univ-st-etienne.fr"},
    {name = "Roland Denis", email = "denis@math.univ-lyon1.fr"},
    {name = "Nicolas Ressayre", email = "ressayre@math.univ-lyon1.fr"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
]
keywords = [
    "Moment cone",
    "Kronecker",
    "Fermion",
    "Sage",
]
requires-python = ">=3.11"
dependencies = [
   "tqdm", # Progress bar
   "numpy>=2", # Numpy with proper type handling
   "python-flint", # Python wrapper around FLINT (Fast Library for Number Theory)
]

[project.optional-dependencies]
dev = [
   "mypy",   # Checking type annotations
   "pytest", # Checking examples in docstring
   "line_profiler", # Profiling functions by line_profiler
   "pyprof2calltree", # Converter of functions call stats for kcachegrind
   "types-tqdm", # Stubs for tqdm
   "sphinx", # Documentation
   "sphinx-autodoc-typehints", # Type annotation in the doc
]

[project.scripts]
moment_cone = "moment_cone.main:moment_cone_from_cmd"

[project.urls]
homepage = "https://github.com/ea-icj/moment_cone"
repository = "https://github.com/ea-icj/moment_cone"
"Bug Tracker" = "https://github.com/ea-icj/moment_cone/issues"

[tool.mypy]
plugins = "numpy.typing.mypy_plugin"

